--- a/cicd/pom.xml
+++ b/cicd/pom.xml
@@ -12,20 +12,8 @@
 	<artifactId>cicd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>cicd</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
